@@ -18,22 +18,18 @@ repositories {
 }
 
 dependencies {
-  implementation enforcedPlatform('io.netty:netty-bom:4.1.130.Final')
   implementation project(":gradle-plugin-api")
   implementation files('build/libs/server.jar')
   implementation fileTree(dir: 'build/libs/runtime', include: ['*.jar'], exclude: ['gradle-tooling-api-*.jar',
   'slf4j-api-*.jar'])
   implementation("org.gradle:gradle-tooling-api:${toolingAPIVersion}")
   implementation 'javax.annotation:javax.annotation-api:1.3.2'
-  implementation "io.grpc:grpc-protobuf:${grpcVersion}"
-  implementation "io.grpc:grpc-stub:${grpcVersion}"
-  implementation "io.grpc:grpc-netty:${grpcVersion}"
+  implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
   implementation 'io.github.g00fy2:versioncompare:1.4.1'
   implementation project(':gradle-language-server')
   implementation "org.eclipse.lsp4j:org.eclipse.lsp4j:0.24.0"
   implementation "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.24.0"
   runtimeOnly 'org.slf4j:slf4j-simple:2.0.0-alpha6'
-  testImplementation "io.grpc:grpc-testing:${grpcVersion}"
   testImplementation 'junit:junit:4.13.1'
   testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
   testImplementation 'org.powermock:powermock-api-mockito2:2.0.7'
@@ -51,7 +47,6 @@ sourceSets {
     }
     java {
       srcDirs mainJavaDir
-      srcDirs 'build/generated/source/proto/main/grpc'
       srcDirs 'build/generated/source/proto/main/java'
     }
     resources {
@@ -61,25 +56,12 @@ sourceSets {
 }
 
 protobuf {
-  plugins {
-    grpc {
-      // for apple m1, please add protoc_platform=osx-x86_64 in $HOME/.gradle/gradle.properties
-      if (project.hasProperty('protoc_platform')) {
-        artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}:${protoc_platform}"
-      } else {
-        artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
-      }
-    }
-  }
   generateProtoTasks {
     generateTestProto.enabled = false
     extractProto.enabled = false;
     extractIncludeProto.enabled = false;
     extractIncludeTestProto.enabled = false;
     all().each { task ->
-      task.plugins {
-        grpc {}
-      }
       task.builtins {
         remove distribution
       }
@@ -157,6 +139,7 @@ project.tasks.named("processResources") {
 test {
     jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
     '--add-opens=java.base/java.util=ALL-UNNAMED',
+    '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
     '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
     '--add-opens=java.base/java.nio.file=ALL-UNNAMED',
     '--add-opens=java.base/java.io=ALL-UNNAMED',
